--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,13 @@ requires-python = ">=3.11"
 dependencies = [
     "altair>=5.5.0",
     "anthropic>=0.72.0",
+    "datashader>=0.18.2",
     "duckdb>=1.4.1",
+    "geoviews>=1.14.1",
+    "hvplot>=0.12.1",
+    "ipyleaflet>=0.20.0",
+    "leafmap>=0.57.2",
+    "localtileserver>=0.10.6",
     "marimo>=0.17.7",
     "mcp>=1",
     "nbformat>=5.10.4",
@@ -19,6 +25,7 @@ dependencies = [
     "python-lsp-server>=1.13.1",
     "rioxarray>=0.19.0",
     "ruff>=0.14.4",
+    "setuptools>=80.9.0",
     "sqlglot>=27.29.0",
     "vegafusion>=2.0.3",
     "vl-convert-python>=1.8.0",
